--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -5,8 +5,9 @@ name: Sign APK and Deploy to Firebase
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
