--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -6,8 +6,7 @@ name: Sign APK, Bump Version and Deploy to Firebase
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    tags:
-      - 'v*'
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
