--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -56,6 +56,7 @@ jobs:
 
   bump-version:
     needs: [ build ]
+    runs-on: ubuntu-latest
     steps:
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.26.0
