update DEV_CI.yml and update README

--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -2,7 +2,7 @@ name: Run UI and Unit tests
 
 on:
   pull_request:
-    branches: [ development ]
+    branches: [ main, development ]
 
 jobs:
   build:
