--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    needs: [bump-version]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # 1 Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -48,11 +48,6 @@ jobs:
         with:
           name: release.apk
           path: ${{steps.sign_app.outputs.signedReleaseFile}}
-      # 6 Upload mapping file to github action
-      - uses: actions/upload-artifact@master
-        with:
-          name: mapping.txt
-          path: app/build/outputs/mapping/release/mapping.txt
 
   bump-version:
     runs-on: ubuntu-latest
@@ -63,18 +58,17 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create a GitHub release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Bump App version
+        id: bump_version
+        uses: chkfung/android-version-actions@v1.1
         with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+          gradlePath: app/build.gradle
+          versionCode: ${{github.run_number}}
+          versionName: ${{steps.tag_version.outputs.new_tag}}
 
   deploy-firebase:
     # 1
-    needs: [ bump-version, build ]
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       # 2
