--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -57,17 +57,14 @@ jobs:
         with:
           name: version-name
       - name: Read Version Name
-        id: read_version_name
-        env:
-          VERSION_NAME:
-        run: read -r VERSION_NAME<version_name.txt
+        run: echo "VERSION_NAME=$(read -r VERSION_NAME < version_name.txt)" >> $GITHUB_ENV
       - name: Create a GitHub release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{steps.read_version_name.VERSION_NAME}}
-          release_name: Release ${{steps.read_version_name.VERSION_NAME}}
+          tag_name: ${{env.VERSION_NAME}}
+          release_name: Release ${{env.VERSION_NAME}}
 
   bump-version:
     runs-on: ubuntu-latest
