--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -68,7 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download Version Name File
-      - uses: actions/download-artifact@master
+        uses: actions/download-artifact@master
         with:
           name: version-name
       - name: Read Version Name
