--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="app.igormatos.botaprarodar">
+        package="app.igormatos.botaprarodar">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
             android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-            android:maxSdkVersion="18"/>
+            android:maxSdkVersion="18" />
 
     <uses-feature
             android:name="android.hardware.camera"
-            android:required="true"/>
+            android:required="true" />
 
     <application
-            android:allowBackup="true"
             android:name=".common.BprApplication"
+            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".presentation.createcommunity.AddCommunityActivity">
-        </activity>
+        <activity android:name=".presentation.main.trips.tripDetail.TripDetailActivity"></activity>
+        <activity android:name=".presentation.createcommunity.AddCommunityActivity"></activity>
         <activity android:name=".presentation.welcome.WelcomeActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.fullscreenimage.FullscreenImageActivity">
-        </activity>
-        <activity android:name=".presentation.authentication.AuthenticationActivity">
-        </activity>
+        <activity android:name=".presentation.fullscreenimage.FullscreenImageActivity"></activity>
+        <activity android:name=".presentation.authentication.AuthenticationActivity"></activity>
         <activity
                 android:name=".presentation.main.MainActivity"
-                android:label="@string/app_name">
-        </activity>
-        <activity android:name=".presentation.user.UserActivity">
-        </activity>
+                android:label="@string/app_name"></activity>
+        <activity android:name=".presentation.user.UserActivity"></activity>
 
         <provider
                 android:name="androidx.core.content.FileProvider"
@@ -46,29 +42,27 @@
                 android:grantUriPermissions="true">
             <meta-data
                     android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths"/>
+                    android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".presentation.bikeForm.BikeFormActivity">
-        </activity>
-        <activity android:name="app.igormatos.botaprarodar.presentation.bikewithdraw.BikeWithdrawActivity">
-        </activity>
-        <activity android:name=".presentation.bikewithdraw.choosebicycle.WithdrawActivity">
-        </activity>
-        <activity android:name=".presentation.returnbicycle.ReturnBikeActivity">
-        </activity>
-        <activity android:name=".presentation.returnbicycle.RideQuizActivity">
-        </activity>
-        <activity android:name="app.igormatos.botaprarodar.presentation.bikewithdraw.chooseuser.ChooseUserActivity">
+        <activity android:name=".presentation.bikeForm.BikeFormActivity"></activity>
+        <activity android:name=".presentation.bikewithdraw.BikeWithdrawActivity"></activity>
+        <activity android:name=".presentation.bikewithdraw.choosebicycle.WithdrawActivity"></activity>
+        <activity android:name=".presentation.returnbicycle.ReturnBikeActivity"></activity>
+        <activity android:name=".presentation.returnbicycle.RideQuizActivity"></activity>
+        <activity android:name=".presentation.bikewithdraw.chooseuser.ChooseUserActivity">
             <meta-data
                     android:name="android.app.searchable"
-                    android:resource="@xml/searchable"/>
+                    android:resource="@xml/searchable" />
 
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-        <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
+
+        <meta-data
+                android:name="preloaded_fonts"
+                android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
