--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -114,6 +114,5 @@ jobs:
         with:
           appId: ${{secrets.FIREBASE_PROJECT_ID_RELEASE}}
           token: ${{secrets.FIREBASE_TOKEN}}
-          groups: -DEV
-                  -USERS
+          groups: USERS
           file: app-release-unsigned-signed.apk
