--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation "org.koin:koin-test:$koin_version"
     androidTestImplementation "com.google.truth:truth:1.1.2"
+    androidTestImplementation "io.mockk:mockk-android:$mockk_version"
     androidTestUtil 'androidx.test:orchestrator:1.3.0'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0"
 
