--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -58,38 +58,38 @@ jobs:
           name: app-debug-androidTest
           path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
 
-#  firebase: 
-#    name: Run UI tests with Firebase Test Lab
-#    needs: apk
-#    runs-on: ubuntu-18.04
+  firebase: 
+    name: Run UI tests with Firebase Test Lab
+    needs: apk
+    runs-on: ubuntu-18.04
 
-#    steps:
-#      - uses: actions/checkout@v1
+    steps:
+      - uses: actions/checkout@v1
 
-#      - name: Download app APK
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: botaprarodar
+      - name: Download app APK
+        uses: actions/download-artifact@v1
+        with:
+          name: botaprarodar
 
-#      - name: Download Android test APK
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: app-debug-androidTest
+      - name: Download Android test APK
+        uses: actions/download-artifact@v1
+        with:
+          name: app-debug-androidTest
 
-#      - name: Login to Google Cloud
-#        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-#        with:
-#          version: '270.0.0'
-#          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+      - name: Login to Google Cloud
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '270.0.0'
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
 
-#      - name: Set current project
-#        run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
+      - name: Set current project
+        run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
 
-#      - name: Run Instrumentation Tests in Firebase Test Lab
-#        run: gcloud firebase test android run
-#          --type instrumentation
-#          --test app-debug-androidTest/app-debug-androidTest.apk
-#          --app botaprarodar/botaprarodar.apk
-#          --device model=Pixel2,version=29,locale=pt_BR,orientation=portrait
-#          --use-orchestrator
-#          --environment-variables clearPackageData=true
+      - name: Run Instrumentation Tests in Firebase Test Lab
+        run: gcloud firebase test android run
+          --type instrumentation
+          --test app-debug-androidTest/app-debug-androidTest.apk
+          --app botaprarodar/botaprarodar.apk
+          --device model=flame,version=29,locale=pt_BR,orientation=portrait
+          --use-orchestrator
+          --environment-variables clearPackageData=true
