--- a/app/build.gradle
+++ b/app/build.gradle
@@ -172,6 +172,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
+    //Log call
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
 
 }
