--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         daggerVersion = '2.14.1'
         espresso_version = "3.3.0"
         mockk_version = "1.12.0"
+        okhttp3_version = "3.13.1"
     }
 
     repositories {
