--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ apply plugin: 'realm-android'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         applicationId "app.igormatos.botaprarodar"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 3
         versionName "2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -66,46 +66,46 @@ android {
 dependencies {
     implementation project(':core')
     implementation project(path: ':toolkit')
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.security:security-crypto:1.1.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
 
     // Test
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:$mockk_version"
 
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
-    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.3'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.5'
+    androidTestImplementation "androidx.test.ext:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit-ktx:$junit_version"
+    androidTestImplementation "androidx.test:runner:$test_version"
+    androidTestImplementation "androidx.test:core-ktx:$test_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.0'
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_suport_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_suport_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_suport_version"
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation "org.koin:koin-test:$koin_version"
     androidTestImplementation "com.google.truth:truth:1.1.2"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
-    androidTestUtil 'androidx.test:orchestrator:1.3.0'
-    debugImplementation "androidx.fragment:fragment-testing:1.3.0"
+    androidTestUtil 'androidx.test:orchestrator:1.4.0'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.6"
 
     // Android Support and Views
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha10'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-core:17.4.3'
-    implementation 'com.google.firebase:firebase-auth:18.1.0'
-    implementation 'com.google.firebase:firebase-database:18.0.1'
-    implementation 'com.google.firebase:firebase-storage:18.1.1'
-    implementation 'com.google.firebase:firebase-functions:19.0.2'
+    implementation 'com.google.firebase:firebase-core:19.0.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-functions:20.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.3'
+    implementation 'com.google.firebase:firebase-analytics:19.0.2'
 
     // Anko Layouts
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -118,10 +118,10 @@ dependencies {
     kapt 'org.parceler:parceler:1.1.11'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.airbnb.android:lottie:3.6.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     // Jetpack
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -150,8 +150,8 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     // Activity Rule
-    testImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
+    testImplementation "androidx.test:rules:$test_version"
+    androidTestImplementation "androidx.test:rules:$test_version"
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.4'
@@ -176,7 +176,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
 
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
 }
 
