--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,20 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.4.10'
+        kotlin_version = '1.5.31'
         koin_version = '2.2.0-rc-3'
         anko_version='0.10.5'
-        coroutines_version = "1.4.0"
-        room_version = "2.2.2"
+        coroutines_version = "1.5.1"
+        room_version = "2.3.0"
         glide_version = "4.8.0"
-        nav_version = "2.1.0"
+        nav_version = "2.3.5"
         daggerVersion = '2.14.1'
-        espresso_version = "3.3.0"
-	mockk_version = "1.12.0"
+        espresso_version = "3.4.0"
+        espresso_suport_version = "3.0.2"
+        mockk_version = "1.12.0"
         okhttp3_version = "3.13.1"
+        junit_version = "1.1.3"
+        test_version = "1.4.0"
     }
 
     repositories {
@@ -20,12 +23,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.gms:google-services:4.3.10'
         classpath "io.realm:realm-gradle-plugin:6.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
     }
 }
 
