--- a/.github/workflows/DEPLOY_CI.yml
+++ b/.github/workflows/DEPLOY_CI.yml
@@ -113,6 +113,6 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_PROJECT_ID_RELEASE}}
-          serviceAccountJsonPlainText: ${{secrets.SERVICE_ACCOUNT}}
+          serviceCredentialsFile: ${{secrets.SERVICE_ACCOUNT}}
           groups: "DEV, USERS"
           file: app-release-unsigned-signed.apk
