--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ buildscript {
         espresso_suport_version = "3.0.2"
         mockk_version = "1.12.0"
         okhttp3_version = "3.13.1"
-        junit_version = "1.1.3"
+        junit_ext_version = "1.1.3"
+        junit_version = "4.13.2"
         test_version = "1.4.0"
     }
 
