--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,5 +8,5 @@ dependencies {
 
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = JavaVersion.VERSION_11.toString()
+targetCompatibility = JavaVersion.VERSION_11.toString()
