Feature: fix androidx.test.ext:junit version

--- a/toolkit/build.gradle
+++ b/toolkit/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation "androidx.test.ext:junit:$espresso_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 }
