Feature: Fix version device pixel 3 and pixel 4 api 30 at pipeline DEV_CI, resize icon user lock

--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -90,6 +90,7 @@ jobs:
           --type instrumentation
           --test app-debug-androidTest/app-debug-androidTest.apk
           --app botaprarodar/botaprarodar.apk
-          --device model=Sailfish,version=30,locale=pt_BR,orientation=portrait
+          --device model=flame,version=29,locale=pt_BR,orientation=portrait
+          --device model=blueline,version=30,locale=pt_BR,orientation=portrait
           --use-orchestrator
           --environment-variables clearPackageData=true
