--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.6.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'id.zelory:compressor:3.0.1'
 
     // Jetpack
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
