--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="app.igormatos.botaprarodar">
+    package="app.igormatos.botaprarodar">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
-            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-            android:maxSdkVersion="18" />
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <queries>
         <intent>
@@ -14,25 +14,30 @@
     </queries>
 
     <uses-feature
-            android:name="android.hardware.camera"
-            android:required="true" />
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
-            android:name=".common.BprApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".presentation.login.selectCommunity.SelectCommunityActivity"/>
+        android:name=".common.BprApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".presentation.components.FinishWithdraw"
+            android:exported="true"
+            android:label="@string/title_activity_finish_withdraw"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".presentation.login.selectCommunity.SelectCommunityActivity" />
         <activity android:name=".presentation.login.registration.RegisterActivity" />
         <activity android:name=".presentation.login.passwordRecovery.PasswordRecoveryActivity" />
         <activity android:name=".presentation.login.LoginActivity" />
         <activity
-                android:name=".presentation.splash.SplashActivity"
-                android:theme="@style/SplashScreenTheme"
-                android:exported="true">
+            android:name=".presentation.splash.SplashActivity"
+            android:exported="true"
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,18 +50,18 @@
         <activity android:name=".presentation.fullscreenimage.FullscreenImageActivity" />
         <activity android:name=".presentation.authentication.AuthenticationActivity" />
         <activity
-                android:name=".presentation.main.MainActivity"
-                android:label="@string/app_name" />
+            android:name=".presentation.main.MainActivity"
+            android:label="@string/app_name" />
         <activity android:name=".presentation.user.UserActivity" />
 
         <provider
-                android:name="androidx.core.content.FileProvider"
-                android:authorities="${applicationId}.provider"
-                android:exported="false"
-                android:grantUriPermissions="true">
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/file_paths" />
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
 
         <activity android:name=".presentation.bikeForm.BikeFormActivity" />
@@ -64,11 +69,12 @@
         <activity android:name=".presentation.bikewithdraw.choosebicycle.WithdrawActivity" />
         <activity android:name=".presentation.returnbicycle.ReturnBikeActivity" />
         <activity android:name=".presentation.returnbicycle.RideQuizActivity" />
-        <activity android:name=".presentation.bikewithdraw.chooseuser.ChooseUserActivity"
+        <activity
+            android:name=".presentation.bikewithdraw.chooseuser.ChooseUserActivity"
             android:exported="true">
             <meta-data
-                    android:name="android.app.searchable"
-                    android:resource="@xml/searchable" />
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
