Feature: redirecting button to home and Withdraw another bike
Co-authored-by: devcapu <felipe.b2014@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
+
     buildFeatures {
         dataBinding true
         viewBinding true
