--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".presentation.components.FinishWithdraw"
+            android:name=".presentation.bikewithdraw.FinishWithdrawActivity"
             android:exported="true"
             android:label="@string/title_activity_finish_withdraw"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".presentation.returnbicycle.FinishReturnBikeActivity"
+            android:exported="true"
+            android:label="@string/title_activity_finish_withdraw"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".presentation.login.selectCommunity.SelectCommunityActivity" />
         <activity android:name=".presentation.login.registration.RegisterActivity" />
         <activity android:name=".presentation.login.passwordRecovery.PasswordRecoveryActivity" />
@@ -46,9 +53,6 @@
         </activity>
         <activity android:name=".presentation.main.trips.tripDetail.TripDetailActivity" />
         <activity android:name=".presentation.createcommunity.AddCommunityActivity" />
-        <activity android:name=".presentation.welcome.WelcomeActivity" />
-        <activity android:name=".presentation.fullscreenimage.FullscreenImageActivity" />
-        <activity android:name=".presentation.authentication.AuthenticationActivity" />
         <activity
             android:name=".presentation.main.MainActivity"
             android:label="@string/app_name" />
@@ -66,20 +70,7 @@
 
         <activity android:name=".presentation.bikeForm.BikeFormActivity" />
         <activity android:name=".presentation.bikewithdraw.BikeWithdrawActivity" />
-        <activity android:name=".presentation.bikewithdraw.choosebicycle.WithdrawActivity" />
         <activity android:name=".presentation.returnbicycle.ReturnBikeActivity" />
-        <activity android:name=".presentation.returnbicycle.RideQuizActivity" />
-        <activity
-            android:name=".presentation.bikewithdraw.chooseuser.ChooseUserActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
