--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,9 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/AL2.0'
-        exclude 'META-INF/LGPL2.1'
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 
     buildFeatures {
@@ -50,13 +51,15 @@ android {
         viewBinding true
         compose true
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = '1.8'
+        useIR = true
     }
+
 
     composeOptions {
         kotlinCompilerExtensionVersion '1.0.5'
+        kotlinCompilerVersion '1.5.21'
     }
 
     defaultConfig.vectorDrawables.useSupportLibrary = true
@@ -83,6 +86,8 @@ dependencies {
     implementation project(path: ':toolkit')
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.security:security-crypto:1.1.0-alpha03'
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     // Test
     testImplementation "junit:junit:$junit_version"
