--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         junit_ext_version = "1.1.3"
         junit_version = "4.13.2"
         test_version = "1.4.0"
+        compose_version = '1.0.1'
     }
 
     repositories {
