--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ android {
 }
 
 dependencies {
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     def lifecycle_version = "2.4.0"
     def kotlin_version = "1.5.31"
 
