Correção do error ao devolver bike e desenvolvimento de novas telas para correção do mesmo.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -90,6 +91,8 @@ dependencies {
 
     implementation project(path: ':toolkit')
     implementation 'androidx.security:security-crypto:1.1.0-alpha03'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
 
     // Test
     testImplementation "junit:junit:$junit_version"
