Adicionando branch development

--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -3,6 +3,8 @@ name: Run UI and Unit tests
 on:
   pull_request:
     branches: [ main, development ]
+  push: 
+    branches: [ development ]
 
 jobs:
   build:
