Adjusting .yml to use workflow_dispatch

--- a/.github/workflows/DEV_CI_MANUAL.yml
+++ b/.github/workflows/DEV_CI_MANUAL.yml
@@ -1,10 +1,7 @@
 name: Manual Tests
 
 on:
-  pull_request:
-    branches: [ main, development ]
-  push: 
-    branches: [ development ]
+  workflow_dispatch:
 
 jobs:
   build:
