--- a/.github/workflows/DEV_CI_MANUAL.yml
+++ b/.github/workflows/DEV_CI_MANUAL.yml
@@ -1,7 +1,12 @@
-name: Manual Tests
+name: Workflow Dispatch
 
 on:
   workflow_dispatch:
+    inputs:
+      input:
+        description: "Test"
+        required: false
+        default: "World"
 
 jobs:
   build:
