--- a/.github/workflows/DEV_CI_M.yml
+++ b/.github/workflows/DEV_CI_M.yml
@@ -1,12 +1,6 @@
 name: Workflow Dispatch Tests
 
-on:
-  workflow_dispatch:
-    inputs:
-      input:
-        description: "Test"
-        required: false
-        default: "World"
+on: workflow_dispatch
 
 jobs:
   build:
