Fixing CI flows, making DEPLOY_CI manual and DEV_CI run on main

--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main, development ]
   push: 
-    branches: [ development ]
+    branches: [ main, development ]
 
 jobs:
   build:
